fix meals summary alignment

--- a/src/components/Meals/MealsSummary.module.css
+++ b/src/components/Meals/MealsSummary.module.css
@@ -3,7 +3,7 @@
     max-width: 45rem;
     width: 90%;
     margin: auto;
-    top: 35%;
+    top: -20%;
     left: 50%;
     transform: translateX(-50%);
     margin-top: -10rem;
